# zench

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  oldmain.cpp
.github/workflows/: build-release.yml  continuous-integration.yml
libzench/: CMakeLists.txt
libzench/include/zench/: Component.hpp  FileSystem.hpp  Keyboard.hpp  Mouse.hpp  Screen.hpp  StandardFileSystem.hpp  ZMachine.hpp  ZStringDecoder.hpp  oldZMachine.hpp  zench.hpp
libzench/src/: CMakeLists.txt  Instruction.hpp  StandardFileSystem.cpp  ZMachine.cpp  ZMachineImpl.cpp  ZMachineImpl.hpp  ZStringDecoder.cpp  zench.cpp
old_code/: Instruction.cpp  VariableProxy.cpp  VariableProxy.hpp  ZStringDecoder.hpp  oldZMachine.cpp  zench.hpp
tests/: CMakeLists.txt  example.cpp
zench/: CMakeLists.txt  Config.cmake.in
zench/include/zench/: Public.hpp
zench/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
zenchlib/include/zench/: ZMachine.hpp  zench.hpp
zenchlib/src/: Instruction.hpp  ZMachine.cpp
zygodactyl/: CMakeLists.txt  Config.cmake.in
zygodactyl/include/zygodactyl/: Public.hpp
zygodactyl/src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp
